--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.6.0
+anyio==4.2.0
 attrs==23.1.0
 Authlib==1.2.1
 Automat==22.10.0
@@ -9,7 +11,14 @@ charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==41.0.5
 cssselect==1.2.0
+exceptiongroup==1.2.0
 filelock==3.13.1
+grpcio==1.60.1
+grpcio-health-checking==1.60.1
+grpcio-tools==1.60.1
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
@@ -21,9 +30,12 @@ lxml==4.9.3
 packaging==23.2
 parsel==1.8.1
 Protego==0.3.0
+protobuf==4.25.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
+pydantic==2.6.1
+pydantic-core==2.16.2
 PyDispatcher==2.0.7
 pyOpenSSL==23.3.0
 queuelib==1.6.2
@@ -32,12 +44,14 @@ requests-file==1.5.1
 Scrapy==2.11.0
 service-identity==23.1.0
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.5
 tldextract==5.1.0
+tqdm==4.66.1
 Twisted==22.10.0
 typing-extensions==4.8.0
 urllib3==2.0.7
 validators==0.22.0
 w3lib==2.1.2
-weaviate-client==3.25.3
+weaviate-client==4.4.4
 zope.interface==6.1
