--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,54 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.2.0
+async-timeout==4.0.3
 attrs==23.1.0
 Authlib==1.2.1
 Automat==22.10.0
+backoff==2.2.1
 beautifulsoup4==4.12.2
 bs4==0.0.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
+cohere==4.47
 constantly==23.10.4
 cryptography==41.0.5
 cssselect==1.2.0
+dataclasses-json==0.6.4
 exceptiongroup==1.2.0
+fastavro==1.9.4
 filelock==3.13.1
+frozenlist==1.4.1
+fsspec==2024.2.0
+greenlet==3.0.3
 grpcio==1.60.1
 grpcio-health-checking==1.60.1
 grpcio-tools==1.60.1
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
+huggingface-hub==0.20.3
 hyperlink==21.0.0
 idna==3.4
+importlib-metadata==6.11.0
 incremental==22.10.0
 install==1.3.5
 itemadapter==0.8.0
 itemloaders==1.1.0
 jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.1.7
+langchain-community==0.0.20
+langchain-core==0.1.23
+langsmith==0.0.87
 lxml==4.9.3
+marshmallow==3.20.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+numpy==1.26.4
 packaging==23.2
 parsel==1.8.1
 Protego==0.3.0
@@ -38,20 +60,30 @@ pydantic==2.6.1
 pydantic-core==2.16.2
 PyDispatcher==2.0.7
 pyOpenSSL==23.3.0
+PyYAML==6.0.1
 queuelib==1.6.2
+regex==2023.12.25
 requests==2.31.0
 requests-file==1.5.1
+safetensors==0.4.2
 Scrapy==2.11.0
 service-identity==23.1.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
+SQLAlchemy==2.0.27
+tenacity==8.2.3
 tldextract==5.1.0
+tokenizers==0.15.2
 tqdm==4.66.1
+transformers==4.37.2
 Twisted==22.10.0
 typing-extensions==4.8.0
+typing-inspect==0.9.0
 urllib3==2.0.7
 validators==0.22.0
 w3lib==2.1.2
 weaviate-client==4.4.4
+yarl==1.9.4
+zipp==3.17.0
 zope.interface==6.1
