--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
+altair==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
 async-timeout==4.0.3
@@ -8,10 +9,13 @@ Authlib==1.2.1
 Automat==22.10.0
 backoff==2.2.1
 beautifulsoup4==4.12.2
+blinker==1.7.0
 bs4==0.0.1
+cachetools==5.3.2
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 cohere==4.47
 constantly==23.10.4
 cryptography==41.0.5
@@ -22,6 +26,8 @@ fastavro==1.9.4
 filelock==3.13.1
 frozenlist==1.4.1
 fsspec==2024.2.0
+gitdb==4.0.11
+GitPython==3.1.41
 greenlet==3.0.3
 grpcio==1.60.1
 grpcio-health-checking==1.60.1
@@ -37,52 +43,76 @@ incremental==22.10.0
 install==1.3.5
 itemadapter==0.8.0
 itemloaders==1.1.0
+Jinja2==3.1.3
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 langchain==0.1.7
 langchain-community==0.0.20
 langchain-core==0.1.23
 langsmith==0.0.87
 lxml==4.9.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 marshmallow==3.20.2
+mdurl==0.1.2
 multidict==6.0.5
 mypy-extensions==1.0.0
 numpy==1.26.4
 packaging==23.2
+pandas==2.2.0
 parsel==1.8.1
+pillow==10.2.0
 Protego==0.3.0
 protobuf==4.25.2
+pyarrow==15.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==2.6.1
 pydantic-core==2.16.2
+pydeck==0.8.1b0
 PyDispatcher==2.0.7
+pygments==2.17.2
 pyOpenSSL==23.3.0
+python-dateutil==2.8.2
+pytz==2024.1
 PyYAML==6.0.1
 queuelib==1.6.2
+referencing==0.33.0
 regex==2023.12.25
 requests==2.31.0
 requests-file==1.5.1
+rich==13.7.0
+rpds-py==0.18.0
 safetensors==0.4.2
 Scrapy==2.11.0
 service-identity==23.1.0
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.27
+streamlit==1.31.1
 tenacity==8.2.3
 tldextract==5.1.0
 tokenizers==0.15.2
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
 tqdm==4.66.1
 transformers==4.37.2
 Twisted==22.10.0
 typing-extensions==4.8.0
 typing-inspect==0.9.0
+tzdata==2024.1
+tzlocal==5.2
 urllib3==2.0.7
 validators==0.22.0
 w3lib==2.1.2
+watchdog==4.0.0
 weaviate-client==4.4.4
 yarl==1.9.4
 zipp==3.17.0
