--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ itemadapter==0.8.0
 itemloaders==1.1.0
 Jinja2==3.1.3
 jmespath==1.0.1
+jq==1.6.0
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.21.1
@@ -81,6 +82,7 @@ python-dateutil==2.8.2
 pytz==2024.1
 PyYAML==6.0.1
 queuelib==1.6.2
+rank-bm25==0.2.2
 referencing==0.33.0
 regex==2023.12.25
 requests==2.31.0
